# suri

./: index.html  package.json  package.json.orig  package.json.rej  potato.json  tsconfig.json  vite.config.ts
.github/workflows/: tauri.yaml
.zed/: settings.json
patches/: slack.ts@0.0.18.patch
src/: global.d.ts  index.tsx  meow.txt  polyfill.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: gpu.rs  lib.rs  main.rs  scrape.js
src-tauri/src/commands/: local_config.rs  mod.rs  oauth.rs  reload.rs  scrape.js  sys.rs
src/components/: chat.tsx  emojiList.tsx
src/lib/: background.ts  messageParser.tsx  parseMrkdwn.ts  safeStore.ts  slack.d.ts  slack.ts  slacktism.ts
src/polyfills/: async.ts  ws.ts
src/views/: fallback.tsx  index.tsx  login.tsx  testskibidi.tsx
